--- a/map.html
+++ b/map.html
@@ -31,7 +31,7 @@
 
     <script
       type="text/javascript"
-      src="http://maps.google.com/maps/api/js?sensor=false"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIy_BKi6A05sphQNH7sNtYLNo_K9pin2Q&callback=initMap"
     ></script>
 
     <script language="javascript">
