--- a/world.html
+++ b/world.html
@@ -5,6 +5,6 @@
   <body>
     <li><a href="https://coronaboard.kr/" target="_self">코로나 보드</a></li>
     <li><a href="https://corona-live.com/world/" target="_self">코로나 라이브</a></li>
-    <li><a href="http://ncov.mohw.go.kr/bdBoardList_Real.do?brdId=1&brdGubun=14&ncvContSeq=&contSeq=&board_id=&gubun=" target="_self">질병관리청</a></li>
+    <li><a href="https://ourworldindata.org/coronavirus-data" target="_self">ourworld</a></li>
   </body>
 </html>
