--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ menu박스 가운데정렬, 글자가운데 정렬 */
         </header>
         <article>
             <iframe id="listwindow" src="https://corona-live.com/vaccine/" name="up">지원안함</iframe><br>
-            <a style="margin-left: 220px;" href="http://ncov.mohw.go.kr/tcmBoardView.do?brdId=3&brdGubun=31&dataGubun=&ncvContSeq=6060&contSeq=6060&board_id=312&gubun=ALL" target="_blank">새창에서 보기</a>
+            <a style="margin-left: 220px;" href="http://ncov.mohw.go.kr/tcmBoardView.do?brdId=3&brdGubun=31&dataGubun=&ncvContSeq=6060&contSeq=6060&board_id=312&gubun=ALL" target="_blank">보도자료 보기</a>
         </article>
     </section>
 
